add solved code for leetcode algorithm problem No.352

--- a/battle ground.ipynb
+++ b/battle ground.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -42,7 +43,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "arr = [-3,-1,-2]\n",
@@ -54,7 +57,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "k=3\n",
@@ -70,6 +75,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -100,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class LRUCache(object):\n",
@@ -152,6 +160,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -161,6 +170,106 @@
     "print( cache.get(1) )\n",
     "cache.put(1,2)\n",
     "print( cache.get(1) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# leetcode algorithm problem No.352 Data stream as disjoint intervals "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node(object):\n",
+    "    def __init__(self,value):\n",
+    "        self.pre = None\n",
+    "        self.next = None\n",
+    "        self.value = value        \n",
+    "        \n",
+    "class Interval(object):\n",
+    "    def __init__(self,start,end) :\n",
+    "        self.start = start\n",
+    "        self.end = end\n",
+    "        \n",
+    "class SummaryRanges(object):\n",
+    "    def __init__(self):\n",
+    "        self.head = Node(None)\n",
+    "        self.tail = Node(None)\n",
+    "        self.head.pre = None\n",
+    "        self.head.next = self.tail\n",
+    "        self.tail.pre = self.head\n",
+    "        self.tail.next = None\n",
+    "\n",
+    "    def insertCurrentPre(self,current_node,insert_node):\n",
+    "        insert_node.pre = current_node.pre\n",
+    "        current_node.pre.next = insert_node\n",
+    "        insert_node.next = current_node\n",
+    "        current_node.pre = insert_node\n",
+    "            \n",
+    "    def insertCurrentNext(self,current_node,insert_node):\n",
+    "        insert_node.next = current_node.next\n",
+    "        current_node.next.pre = insert_node\n",
+    "        current_node.next = insert_node\n",
+    "        insert_node.pre = current_node\n",
+    "\n",
+    "    def removeNode(self,node) :\n",
+    "        node.pre.next = node.next\n",
+    "        node.next.pre = node.pre\n",
+    "\n",
+    "    def addNum(self,add_num):\n",
+    "        if self.head.next == self.tail : \n",
+    "            self.insertCurrentNext(self.head,Node(Interval(add_num,add_num)))             \n",
+    "        else :\n",
+    "            node = self.head\n",
+    "            while node.next != self.tail :\n",
+    "                node = node.next\n",
+    "                interval = node.value\n",
+    "                if add_num >= interval.start and add_num <= interval.end :\n",
+    "                    break\n",
+    "                elif add_num < interval.start :\n",
+    "                    if node.pre == self.head : \n",
+    "                        if add_num + 1 == interval.start :\n",
+    "                            interval.start = add_num\n",
+    "                        else :\n",
+    "                            self.insertCurrentPre(node,Node(Interval(add_num,add_num)))\n",
+    "                    else :\n",
+    "                        before_interval = node.pre.value\n",
+    "                        if before_interval.end == add_num-1 and add_num+1 == interval.start :\n",
+    "                            before_interval.end = interval.end\n",
+    "                            self.removeNode(node)\n",
+    "                        elif before_interval.end == add_num-1 and add_num+1 < interval.start :\n",
+    "                            before_interval.end = add_num\n",
+    "                        elif before_interval.end < add_num-1 and add_num+1 == interval.start :\n",
+    "                            interval.start = add_num\n",
+    "                        else : \n",
+    "                            self.insertCurrentPre(node,Node(Interval(add_num,add_num)))\n",
+    "                    break                    \n",
+    "            if node.next == self.tail :\n",
+    "                interval = node.value\n",
+    "                if interval.end + 1 == add_num :\n",
+    "                    interval.end = add_num\n",
+    "                elif interval.end + 1 < add_num :\n",
+    "                    self.insertCurrentNext(node,Node(Interval(add_num,add_num)))\n",
+    "                \n",
+    "    def getIntervals(self):\n",
+    "        return_list = []\n",
+    "        node = self.head\n",
+    "        while node.next != self.tail :\n",
+    "            node = node.next\n",
+    "            interval = node.value\n",
+    "            return_list.append([interval.start,interval.end])\n",
+    "        return return_list\n",
+    "\n",
+    "    def printStatus(self):\n",
+    "        node = self.head\n",
+    "        while node.next != self.tail :\n",
+    "            node = node.next\n",
+    "            print(node.value.start,node.value.end)"
    ]
   }
  ],
